--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Om de Gui te starten moet er in de folder GUI het bestand "WelcomeGUI.py" worden gestart
+Om de Gui te starten moet er in de folder GUI het bestand "FinalGUI.py" worden gestart
